--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link href="/styles.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="normalize.css">
   </head>
 
     <body>
